--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
   <head>
     <title>
-      Good day!
+      Welcome
     </title>
   </head>
   
   <body>
+    <h1>
+      Good day!
+    </h1>    
 Hello there, awesome person!
   </body>
 </html>
