--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   
   <body>
 Hello there, awesome person!
+    
+    <img src=https://avatars2.githubusercontent.com/u/49409219?v=4>
   </body>
 </html>
