--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>
       Good day!
+      <img src="https://avatars2.githubusercontent.com/u/49409219?v=4">
     </h1>    
 Hello there, awesome person!
   </body>
