--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
       <img src="https://avatars2.githubusercontent.com/u/49409219?v=4">
     </h1>    
 Hello there, awesome person!
+    
+    <ul>
+      <li> fireman </li>
+      <li> police man </li>
+      <li> paramedic </li>
+    </ul>
   </body>
 </html>
