--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 Hello there, awesome person!
     
     <ul>
-      <li> fireman </li>
-      <li> police man </li>
-      <li> paramedic </li>
+      <li><a href="https://c8.alamy.com/comp/FAPMEP/darren-ninnisgamekeeper-with-shotgun-and-dogs-and-a-retained-firefighter-FAPMEP.jpg"> This is a fireman </a></li>
+      <li><a href="https://c1.staticflickr.com/9/8628/16083253743_5906440f8f.jpg"> This is a policeman </a></li>
+      <li><a href="https://cdn.images.express.co.uk/img/dynamic/1/590x/paramedic-ALAMY-441769.jpg"> This is a paramedic </a></li>
     </ul>
   </body>
 </html>
